scrollbar fixes and basic version footer

--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -60,4 +60,20 @@
       -ms-overflow-style: none;  /* IE and Edge */
       scrollbar-width: none;  /* Firefox */
 }
+
+html, body {
+  overflow: hidden;
+  height: 100%;
+  overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+/* For Safari bounce effect */
+body {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+
 }
